--- a/Project 3 - Quiz App/index.html
+++ b/Project 3 - Quiz App/index.html
@@ -10,8 +10,18 @@
 
 <body>
 
+    <div class="progress">
+        <div class="progress-bar"></div>
+    </div>
+
     <div class="card">
-        <h1>Front End Quiz</h1>
+        <div class="head">
+            <h1>Frontend Web Dev Quiz</h1>
+            <a href="#">Select topic</a>
+        </div>
+
+
+
         <div class="question-card">
             <h2 id="question">The Question goes here?</h2>
             <div class="btncard">
@@ -20,13 +30,14 @@
                 <button class="ans">Anser 1</button>
                 <button class="ans">Anser 1</button>
             </div>
+
+            <p id="finalcard">You scored 50 out of 12</p>
+
         </div>
         <div>
             <button id="nextbtn">Next</button>
         </div>
     </div>
-
-
 
     <script src="script.js"></script>
 </body>
