--- a/Project 6 - Age Calculator/index.html
+++ b/Project 6 - Age Calculator/index.html
@@ -12,7 +12,7 @@
             <h1>Age <br> <span>Calculator</span></h1>
             <div class="inputfield">
                 <input type="date" value="2001-04-20" min="1920-12-31" max="2023-12-31">
-                <button>Calculate</button>
+                <button onclick="calculate()">Calculate</button>
             </div>
             <p id="ptag"></p>
         </div>
