--- a/Project 15 - Calculator/index.html
+++ b/Project 15 - Calculator/index.html
@@ -79,20 +79,20 @@
       grid-column: span 2;
     }
     body.dark-mode {
-    background: #ecfdf7;
+    background: #F8EEDF;
 }
 .dark-mode .btnEach{
-    background: #056050;
+    background: #8E1616;
 }
 .dark-mode .btnEach:hover{
-    background: #00232fb5;
+    background: #8e1616ce;
 }
 .dark-mode .wrppercalc{
-    background: #d0fbe9;
+    background: #E8C999;
         box-shadow: 0 8px 30px rgb(0 0 0 / 21%);
 }
 .dark-mode .btnClr {
-    background: #22656b;
+    background: #000000;
     color: white;
 }
 .dark-mode .btnClr:hover {
@@ -100,15 +100,15 @@
     color: #22656b;
 }
 .dark-mode .scrEeNn{
-    background: #fff;
-    color: black;
+    background: #F8EEDF;
+    color: #8E1616;
 }
 .dark-mode .btnOpZ {
-    background: #ffffff;
-    color: #22656b;
+    background: #F8EEDF;
+    color: #8E1616;
 }
 .dark-mode .btnOpZ:hover {
-    background: #22656b;
+    background: #8E1616;
     color: #ffffff;
 }
 
@@ -134,8 +134,8 @@
    transform: scale(1.1);
 }
 .dark-mode .MyDarkModeButton {
-    background: white;
-box-shadow: 0 8px 30px rgb(98 195 185 / 63%);
+    background: #F8EEDF;
+box-shadow: 0 8px 30px rgba(241, 241, 192, 0.63);
 }
 
   </style>
@@ -217,7 +217,7 @@ box-shadow: 0 8px 30px rgb(98 195 185 / 63%);
         console.log(result);
         mysceenInput.textContent = result;
       } catch (e) {
-        mysceenInput.textContent = 'Err';
+        mysceenInput.textContent = 'Error';
       }
     }
 
