--- a/Project 15 - Calculator/index.html
+++ b/Project 15 - Calculator/index.html
@@ -41,6 +41,7 @@
       padding: 10px 15px;
       border-radius: 10px;
       overflow: hidden;
+          box-shadow: #ffffff2b -4px -4px 8px 2px inset;
     }
 
     .btnsGriddzz {
@@ -59,6 +60,7 @@
       cursor: pointer;
           transform: scale(1);
       transition: all 0.2s ease-in-out;
+box-shadow: rgb(255 255 255 / 24%) -3px -3px 8px 1px inset;
     }
 
     .btnEach:hover {
@@ -83,6 +85,7 @@
 }
 .dark-mode .btnEach{
     background: #8E1616;
+        box-shadow: #ffffff73 -2px -2px 12px 1px inset;
 }
 .dark-mode .btnEach:hover{
     background: #8e1616ce;
@@ -97,15 +100,17 @@
 }
 .dark-mode .btnClr:hover {
     background: #ffffff;
-    color: #22656b;
+    color: #8E1616;
 }
 .dark-mode .scrEeNn{
     background: #F8EEDF;
     color: #8E1616;
+    box-shadow: #e1ccac -3px -4px 15px 0px inset;
 }
 .dark-mode .btnOpZ {
     background: #F8EEDF;
     color: #8E1616;
+        box-shadow: #8e16169c -3px -3px 20px -6px inset;
 }
 .dark-mode .btnOpZ:hover {
     background: #8E1616;
@@ -134,7 +139,7 @@
    transform: scale(1.1);
 }
 .dark-mode .MyDarkModeButton {
-    background: #F8EEDF;
+    background: #E8C999;
 box-shadow: 0 8px 30px rgba(241, 241, 192, 0.63);
 }
 
